# centrovilla

./: CMakeLists.txt  admin.cpp  admin.h  backupmanager.cpp  backupmanager.h  centrovilla.cpp  centrovilla.h  cita.cpp  cita.h  doctor.cpp  doctor.csv  doctor.h  historial_dolencias.csv  main.cpp  main.h  paciente.cpp  paciente.h  pacientes.csv  person.cpp  person.h  usuarios.cpp  usuarios.h
CMakeProject6/: CMakeLists.txt  main.cpp  main.h  paciente.h  person.cpp  person.h  usuarios.cpp  usuarios.h
